[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scripts/purchasable_weapons.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/guns/m4a1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Lighting/light.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Zombie_Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/scripts/sfx.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/player/buy(cha_ching).wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/player/notenoughmoney.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77.9354, 52.0882 )

[node name="purchasable_weapons" type="Node2D"]
script = ExtResource( 1 )
Selected_Weapon = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 0.44545 )
texture = ExtResource( 3 )
color = Color( 1, 0.819608, 0, 1 )

[node name="buyarea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buyarea"]
visible = false
shape = SubResource( 1 )

[node name="WeaponLabelName" type="Label" parent="."]
margin_left = -50.5546
margin_top = 28.0
margin_right = 46.4454
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Hello world"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponLabelPrice" type="Label" parent="."]
margin_left = -50.5546
margin_top = 41.8089
margin_right = 46.4454
margin_bottom = 60.8089
text = "Hello world"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="buy" type="Node2D" parent="sfx"]

[node name="BuySound" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 6 )
volume_db = 1.0
bus = "Soundeffects"

[node name="BuySound2" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 6 )
volume_db = 1.0
pitch_scale = 0.99
bus = "Soundeffects"

[node name="BuySound3" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 6 )
volume_db = 1.0
pitch_scale = 1.01
bus = "Soundeffects"

[node name="not_enough_money" type="Node2D" parent="sfx"]

[node name="notenoughmoney" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 7 )
volume_db = 2.0
bus = "Soundeffects"

[node name="notenoughmoney2" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 7 )
volume_db = 2.0
pitch_scale = 0.98
bus = "Soundeffects"

[node name="notenoughmoney3" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 7 )
volume_db = 2.0
pitch_scale = 1.03
bus = "Soundeffects"

[connection signal="play_sound" from="." to="sfx" method="play_sound"]
[connection signal="body_entered" from="buyarea" to="." method="_on_buyarea_body_entered"]
[connection signal="body_exited" from="buyarea" to="." method="_on_buyarea_body_exited"]
